[package]
name    = "sari_escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "20.0.0" }

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

# Optimise the Wasm binary for on-chain deployment
[profile.release]
opt-level     = "z"      # minimise binary size
overflow-checks = true
debug         = false
strip         = "symbols"
lto           = true
codegen-units = 1
panic         = "abort"